[gd_scene load_steps=5 format=3 uid="uid://cylvwk6gkpqqc"]

[ext_resource type="Script" path="res://scripts/character controllers/state machine/attacks/Fella/SnowBall.gd" id="1_88ddn"]
[ext_resource type="PackedScene" uid="uid://ugrfkn6s0brw" path="res://scenes/tools/hitbox.tscn" id="2_iklh2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g3y14"]

[sub_resource type="SphereMesh" id="SphereMesh_n5hr3"]
material = SubResource("StandardMaterial3D_g3y14")
radius = 0.25
height = 0.5

[node name="SnowBall" type="CharacterBody3D"]
top_level = true
collision_layer = 0
collision_mask = 33
script = ExtResource("1_88ddn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_n5hr3")

[node name="light_hitbox" parent="." instance=ExtResource("2_iklh2")]
hitbox_radius = 0.297
hitstun_frames = 0
knockback = 0.0
knockback_scaling = 0.0

[node name="heavy_hitbox" parent="." instance=ExtResource("2_iklh2")]
hitbox_radius = 0.297
damage = 3.0
hitstun_frames = 10
knockback = 0.0
knockback_scaling = 0.0

[connection signal="area_entered" from="light_hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="heavy_hitbox" to="." method="_on_hitbox_area_entered"]
